fixes the contents alignment issue of being fixed at the left of the browser

--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,17 @@
   }
 }
 
+.banner {
+  display: flex;
+  flex-direction: column;  
+  align-items: center;     /* Centers children on the cross axis (horizontally in this case) */
+  justify-content: center; /* Centers children on the main axis (vertically in this case) */
+  margin: 0 auto;
+}
+
+
 .coverText {
-margin-left: 3rem;
+/* margin-left: 3rem; */
 font-size: 5rem;
 display: flex;
 line-height: 6rem;
@@ -23,10 +32,11 @@ margin-bottom: -10rem;
 display: flex;
 width: 40rem;
 height: auto;
+margin: 0 auto;
 }
 
 .buttons-container {
-  margin-left: 4rem;
+  /* margin-left: 4rem; */
   margin-bottom: 2rem;
   text-align: center;
   background-color: #006241;
